RESOLVED FIXED12974
Repro ASSERT failure when repeatedly running svg/custom/js-update-path-changes.svg
https://bugs.webkit.org/show_bug.cgi?id=12974
Summary Repro ASSERT failure when repeatedly running svg/custom/js-update-path-change...
Geoffrey Garen
Reported 2007-03-05 14:55:40 PST
This does the trick: run-webkit-tests --debug --no-launch-safari --verbose --nthly=100000 svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg svg/custom/js-update-path-changes.svg
Attachments
Initial patch (6.77 KB, patch)
2007-03-11 14:01 PDT, Nikolas Zimmermann
mjs: review+
mitz
Comment 1 2007-03-05 23:20:28 PST
ASSERTION FAILED: extensions->genericContext<SVGPathSeg>(obj) == context (WebCore/bindings/js/JSSVGPathSegListCustom.cpp:52 void WebCore::updatePathSegContextMap(KJS::ExecState*, WebCore::SVGPathSegList*, WebCore::SVGPathSeg*))
Mark Rowe (bdash)
Comment 2 2007-03-07 06:48:12 PST
Nikolas Zimmermann
Comment 3 2007-03-11 13:14:52 PDT
Thanks for the report! I investigated, and found the problem. Trying to come up with a patch soon. Niko
Nikolas Zimmermann
Comment 4 2007-03-11 14:01:22 PDT
Created attachment 13587 [details] Initial patch
Maciej Stachowiak
Comment 5 2007-03-12 17:04:02 PDT
Comment on attachment 13587 [details] Initial patch r=me
Sam Weinig
Comment 6 2007-03-13 10:07:41 PDT
Landed in r20151.
Note You need to log in before you can comment on or make changes to this bug.